Chose photos for homepage and edited marketing funnel text

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a id="logo-container" href="#" class="brand-logo">Whinny</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#features">Features</a></li>
+        <li><a href="#benefits">Benefits</a></li>
         <li><a href="#becomeABroadcaster">Become a Broadcaster</a></li>
         <li><a href="#contactUs">Contact Us</a></li>
         <li><a href="#IdModal">Login</a></li>
@@ -42,7 +43,7 @@
           </div>
         </div>
         <div class="row center">
-          <h5 class="header col s12 light">A mobile app for all things horses.</h5>
+          <h5 class="header col s12 medium">A free mobile app for all things horses</h5>
            <h6>Coming soon.</h6>
         </div>
         <div class="row center">
@@ -63,16 +64,70 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center yellow-text"><i class="material-icons">flash_on</i></h2>
+            <h2 class="center yellow-text"><i class="material-icons">forum</i></h2>
+            <h5 class="center">Direct Messaging</h5>
+
+            <ul>
+              <li>Send direct messages to communicate with friends and use in-text horse emojis</li>
+            </ul>
+
+
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center yellow-text "><i class="material-icons">group</i></h2>
+            <h5 class="center">Group Messaging</h5>
+
+            <ul>
+              <li>Create private, public, or hidden groups for barns, training businesses, common interests, or horse management logs</li>
+            </ul>
+
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center yellow-text "><i class="material-icons">language</i></h2>
+            <h5 class="center">Broadcasts</h5>
+
+            <ul>
+              <li>Stay informed & entertained with selected broadcasts ranging from events, lifestyle, and educational to equine infectious disease alerts</li>
+            </ul>
+
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+  </div>
+
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+        <div class="row center">
+          <h5 class="header col s12 medium">Whinny Screen Shots Here-Compatible with iOS and Android</h5>
+        </div>
+      </div>
+    </div>
+    <!-- *** -->
+    <div class="parallax"><img src="img/background5.png" alt="Unsplashed background img 2"></div>
+  </div>
+
+  <a name="benefits"></a>
+  <div class="container">
+    <div class="section">
+
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center yellow-text"><i class="material-icons">star</i></h2>
             <h5 class="center">Horse Enthusiast</h5>
 
             <ul>
-              <li>Communicate with friends</li>
-              <li>Use horse emojis!</li>
-              <li>Stay up to date on barn happenings</li>
-              <li>Be in the know regarding competitions & events</li>
-              <li>Be entertained and informed by subscribing to broadcasts</li>
-              <li>Protect your horse with disease alert information</li>
+              <li>Chat easily with friends, stay up to date and involved with indivdual barns/trainers, get the latest and unique content from the horse world, get updates and info from competitions and events, share photos and videos, and protect your horse with regional equine disease alerts </li>
             </ul>
 
 
@@ -81,14 +136,11 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center yellow-text "><i class="material-icons">group</i></h2>
-            <h5 class="center">Trainer</h5>
+            <h2 class="center yellow-text "><i class="material-icons">supervisor_account</i></h2>
+            <h5 class="center">Trainer/Horse Industry Professional</h5>
 
             <ul>
-              <li>Organize your business</li>
-              <li>Communicate with clientele about schedules, events, news, fun announcements, finances, etc!</li>
-              <li>Communicate with clients one-on-one</li>
-              <li>Create hidden groups to create horse health or training logs with a client(s)</li>
+              <li>Organize your business, communicate with clientele about schedules, events, announcements, finances, etc., talk with clients one-on-one, create hidden groups for horse health or training logs to be shared with only you and a chosen client(s)</li>
             </ul>
 
           </div>
@@ -96,13 +148,11 @@
 
         <div class="col s12 m4">
           <div class="icon-block">
-            <h2 class="center yellow-text "><i class="material-icons">group</i></h2>
+            <h2 class="center yellow-text "><i class="material-icons">store</i></h2>
             <h5 class="center">Barn Owner/Manager</h5>
 
             <ul>
-              <li>Organize and streamline your barn communication</li>
-              <li>Improve your business productivity</li>
-              <li>Reach all your clients at once in one convenient place</li>
+              <li>Organize and streamline your communication with boarders, improve your business productivity, and save time for other important things in your busy schedule</li>
             </ul>
 
           </div>
@@ -118,7 +168,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">Exclusive Horse world data broadcast right to your phone.</h5>
+          <h5 class="header col s12 medium">Exclusive horse world content broadcast right to your phone</h5>
         </div>
       </div>
     </div>
@@ -132,30 +182,28 @@
       <div class="row">
         <h4>Broadcasts</h4>
         <div class="col s12 m4">
-          <h5>In depth, exclusive info</h5>
+          <h5>Widespread content</h5>
           <ul>
-            <li>Infectious disease alerts</li>
-            <li>Equine Veterinary Tips</li>
-            <li>Equine Nutrition Tips</li>
-            <li>Training Challenges</li>
+            <li>Broadcast examples include:</li>
+            <li>-Real time competition & event information</li>
+            <li>-Lifestlye content</li>
+            <li>-Business management for horse professionals</li>
+            <li>-Equine infectious disease alerts</li>
+            <li>-Veterinary tips from top medical professionals</li>
+            <li>-Horse training & care advice from industry leaders</li>
           </ul>
 
         </div>
         <div class="col s12 m4">
           <h5>High quality information</h5>
           <ul>
-            <li>All Broadcasts will be curated by our staff</li>
-            <li>Specific location based information</li>
-            <li>Updates tailored to your exact interests</li>
+            <li>Impressive standard of quality content for all broadcasts without the "noise" of other social sites. Original and unique content is at the core of what we do. Between in-depth reads & quick skims, there is something for every user.</li>
           </ul>
         </div>
         <div class="col s12 m4">
           <h5>Become a Broadcaster</h5>
           <ul>
-            <li>Reach your exact target market in the horse world</li>
-            <li>Build your brand</li>
-            <li>Receive exclusive early pricing</li>
-            <li>Sign up to become a broadcasting partner</li>
+            <li>Reach your exact target market in the horse world and expand your brand. Reach users in a focused environment. Sign up to become a broadcasting partner with Whinny.</li>
           </ul>
           <a class="waves-effect waves-light btn yellow">Sign Up<i class="material-icons left">playlist_add</i></a>
         </div>
@@ -170,7 +218,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">Stay in touch with other barn members and chat using our special horse emojis.</h5>
+          <h5 class="header col s12 medium">Improved communication leads to happier people and happier horses</h5>
         </div>
       </div>
     </div>
@@ -211,7 +259,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">Barn groups to stay in touch with all your barn members.</h5>
+          <h5 class="header col s12 medium">Groups allow you to stay in the know with barns, trainers, and friends</h5>
         </div>
       </div>
     </div>
@@ -273,10 +321,8 @@
         <div class="col l3 s12">
           <h5 class="white-text">Connect</h5>
           <ul>
-            <li><a class="white-text" href="#!">Twitter</a></li>
+            <li><a class="white-text" href="#!">Instagram</a></li>
             <li><a class="white-text" href="#!">Facebook</a></li>
-            <li><a class="white-text" href="#!">Pinterest</a></li>
-            <li><a class="white-text" href="#!">LinkedIn</a></li>
             <li><a class="white-text" href="#!">Download Whinny for iOS</a></li>
             <li><a class="white-text" href="#!">Download Whinny for Android</a></li>
           </ul>
@@ -285,7 +331,7 @@
     </div>
     <div class="footer-copyright">
       <div class="container">
-      © Whinny Inc.
+      © Whinny Inc. 2016     Privacy Policy      Terms & Conditions
       </div>
     </div>
   </footer>
